--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-shadowsocks (3.0.0-1) UNRELEASED; urgency=medium
+shadowsocks (3.0.0~2018.07.31.git.2c107740eb-1) UNRELEASED; urgency=medium
 
   [ Shell.Xu ]
   * Upstream update.
   * Change init.d to systemd service.
+  * Remove patches because it merged to upstream.
 
  -- Shell.Xu <shell909090@gmail.com>  Tue, 31 Jul 2018 20:27:29 +0800
 
