--- a/debian/changelog
+++ b/debian/changelog
@@ -8,7 +8,7 @@ shadowsocks (3.0.0~2018.07.31.git.2c107740eb-1) unstable; urgency=medium
   * Add fail2ban utils.
   * Change priority to optional, according to policy.
 
- -- Shell Xu <shell909090@gmail.com>  Fri, 03 Aug 2018 22:50:36 +0800
+ -- Shell.Xu <shell909090@gmail.com>  Fri, 03 Aug 2018 22:50:36 +0800
 
 shadowsocks (2.9.0-3) unstable; urgency=medium
 
