--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ shadowsocks (3.0.0~2018.07.31.git.2c107740eb-1) unstable; urgency=medium
   * Add fail2ban utils.
   * Change priority to optional, according to policy.
   * Change url in copyright to https.
+  * Add overriding to lintian error: omitted-systemd-service-for-init.d-script.
 
  -- Shell.Xu <shell909090@gmail.com>  Fri, 03 Aug 2018 22:50:36 +0800
 
